fix(feature-media) : fix feature media cards, align card item, fix image banner, section image lazy loading

--- a/assets/feature-media.css
+++ b/assets/feature-media.css
@@ -64,6 +64,40 @@
     background-color: rgba(29, 41, 57, 1);
 }
 
+.feature__cards-background .feature__cards-background-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.feature__cards-background .feature__cards-background-inner img{
+    position: absolute;
+    object-fit: contain;
+}
+
+.feature__cards-background .feature__cards-background-inner .cards-background-inner--top {
+    top: 24px;
+    left: 76.81px;
+    width: 560px;
+    height: 470px;
+    z-index: 2;
+}
+
+.feature__cards-background .feature__cards-background-inner .cards-background-inner--middle{
+    bottom: -50px;
+    left: 32px;
+    width: 640px;
+    height: 511px;
+    z-index: 1;
+} 
+
+.feature__cards-background .feature__cards-background-inner .cards-background-inner--bottom{
+    bottom: -146px;
+    left: 8px;
+    width: 679px;
+    height: 515px;
+}
+
 .section-inspiration .container .feature__cards .feature__cards-inner{
     display: flex;
     flex-direction: column;
