--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -534,6 +534,14 @@
   color: rgba(234, 236, 240, 1);
 }
 
+/* .hero-banner {
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 500px;
+} */
+
 @media screen and (max-width: 992px){
   .hero-banner{
     height: 736px;
